--- a/templates/login.html
+++ b/templates/login.html
@@ -1,1 +1,24 @@
-test
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>login</title>
+    </head>
+    <body>
+        <div class="login-container">
+            <h1>StudySync</h1>
+            <form method="POST" action="{{ url_for('login') }}">
+                <div class="form-group">
+                    {{ form.email.label }}<br>
+                    {{form.email(placeholder="例）example@mail.com")}}
+                </div>
+                <div class="form-group">
+                    {{ form.password.label }}<br>
+                    {{form.password(placeholder="例）password")}}
+                </div>
+                <button type="submit">{{ form.submit.label }}</button>
+            </form>
+            <a href="{{ url_for('register') }}">アカウントの作成はこちら</a>
+    
+        </div>
+    </body>
+</html>
