--- a/templates/home.html
+++ b/templates/home.html
@@ -21,18 +21,31 @@
         </div>
     </header>
 
-    <!-- タイムライン-->
-    <div class="timeline">
-        {% for post in posts %}
-        <div class="post">
-            <div class="message">{{ post.message }}</div>
-            {% if post.image_path %}
-            <img src="{{ url_for('static', filename=post.image_path) }}" alt="Post Image">
-            {% endif %}
-            <div class="category">{{ post.category.name }}</div>
-            <div class="created-at">{{ post.created_at.strftime('%Y-%m-%d %H:%M:%S') }}</div>
+    <!-- カテゴリフィルター -->
+    <div class="container mt-4">
+        <div class="category-filter">
+            <h4>Categories</h4>
+            <div class="category-buttons">
+                <button class="category-btn active" data-category="all">全て</button>
+                {% for category in categories %}
+                <button class="category-btn" data-category="{{ category.id }}">{{ category.name }}</button>
+                {% endfor %}
+            </div>
         </div>
-        {% endfor %}
+
+        <!-- タイムライン -->
+        <div class="timeline" id="posts-container">
+            {% for post in posts %}
+            <div class="post" data-category="{{ post.category.id }}">
+                <div class="message">{{ post.message }}</div>
+                {% if post.image_path %}
+                <img src="{{ url_for('static', filename=post.image_path) }}" alt="Post Image" class="img-fluid">
+                {% endif %}
+                <div class="category">{{ post.category.name }}</div>
+                <div class="created-at">{{ post.created_at.strftime('%Y-%m-%d %H:%M:%S') }}</div>
+            </div>
+            {% endfor %}
+        </div>
     </div>
 
     <!-- モーダル部分 -->
@@ -87,7 +100,7 @@
             </div>
         </div>
     </div>
-
+    <script src="../static/js/script.js" type="text/javascript"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     {% if form.errors %}
     <script>
