--- a/templates/login.html
+++ b/templates/login.html
@@ -7,6 +7,7 @@
         <div class="login-container">
             <h1>StudySync</h1>
             <form method="POST" action="{{ url_for('login') }}">
+                {{ form.hidden_tag() }}
                 <div class="form-group">
                     {{ form.email.label }}<br>
                     {{form.email(placeholder="例）example@mail.com")}}
