--- a/templates/home.html
+++ b/templates/home.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../static/css/style.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" rel="stylesheet">
     <title>StudySync</title>
 </head>
 <body>
@@ -32,23 +33,40 @@
                 {% endfor %}
             </div>
         </div>
-
-        <!-- タイムライン -->
-        <div class="timeline" id="posts-container">
-            {% for post in posts %}
-            <div class="post" data-category="{{ post.category.id }}">
-                <div class="message">{{ post.message }}</div>
-                {% if post.image_path %}
-                <img src="{{ url_for('static', filename=post.image_path) }}" alt="Post Image" class="img-fluid">
-                {% endif %}
-                <div class="category">{{ post.category.name }}</div>
-                <div class="created-at">{{ post.created_at.strftime('%Y-%m-%d %H:%M:%S') }}</div>
-            </div>
-            {% endfor %}
-        </div>
     </div>
 
-    <!-- モーダル部分 -->
+    <!-- 投稿タイムライン  -->
+    <div class="timeline" id="posts-container">
+        {% for post in posts %}
+        <div class="post card mb-3" data-category="{{ post.category.id }}">
+            <div class="card-body">
+                <div class="username">
+                    <i class="fas fa-user-circle me-2"></i>{{ post.user.username }}
+                </div>
+                <hr/>
+                <div class="message">{{ post.message }}</div>
+                {% if post.image_path %}
+                <img src="{{ url_for('static', filename=post.image_path) }}" alt="Post Image" class="img-fluid mt-2">
+                {% endif %}
+                <hr/>
+                <div class="post-footer">
+                    <div class="post-actions">
+                        <button class="action-btn comment-btn" data-bs-toggle="modal" data-bs-target="#commentModal" data-post-id="{{ post.id }}">
+                            <i class="fas fa-comment"></i>
+                            <span class="comment-count">{{ post.comments|length }}</span>
+                        </button>
+                    </div>
+                    <div class="post-info">
+                        <span class="category">{{ post.category.name }}</span> |
+                        <span class="created-at">{{ post.created_at.strftime('%Y-%m-%d %H:%M:%S') }}</span>
+                    </div>
+                </div>
+            </div>
+        </div>
+        {% endfor %}
+    </div>
+
+    <!-- 投稿モーダル -->
     <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
@@ -100,7 +118,36 @@
             </div>
         </div>
     </div>
+
+    <!-- コメントモーダル -->
+    <div class="modal" id="commentModal" tabindex="-1" role="dialog">
+        <div class="modal-dialog" role="document">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">コメント</h5>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body">
+                    <form id="commentForm">
+                        <div class="form-group">
+                            <label for="commentText">コメントを入力</label>
+                            <textarea class="form-control" id="commentText" rows="3"></textarea>
+                        </div>
+                        <button type="submit" class="btn btn-primary">投稿</button>
+                    </form>
+                    <hr>
+                    <div id="commentList">
+                        <!-- コメント一覧がここに表示される -->
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    
     <script src="../static/js/script.js" type="text/javascript"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     {% if form.errors %}
     <script>
@@ -108,5 +155,50 @@
         myModal.show();
     </script>
     {% endif %}
+    <script>
+        $(document).ready(function() {
+            var postId;
+
+            // モーダルが表示されるときにpostIdを設定
+            $('#commentModal').on('show.bs.modal', function(event) {
+                var button = $(event.relatedTarget);
+                postId = button.data('post-id');
+                loadComments(postId);
+            });
+
+            // コメントフォームの送信をAjaxで処理
+            $('#commentForm').submit(function(event) {
+                event.preventDefault();
+                var commentText = $('#commentText').val();
+                $.ajax({
+                    url: '/comment/' + postId,
+                    type: 'POST',
+                    data: { text: commentText },
+                    success: function(response) {
+                        if (response.status === 'success') {
+                            $('#commentText').val('');
+                            $('#commentList').append('<div><strong>' + response.comment.username + ':</strong> ' + response.comment.text + '</div>');
+                        }
+                    }
+                });
+            });
+
+            // コメントをロードする関数
+            function loadComments(postId) {
+                $.ajax({
+                    url: '/comments/' + postId,
+                    type: 'GET',
+                    success: function(response) {
+                        if (response.status === 'success') {
+                            $('#commentList').empty();
+                            response.comments.forEach(function(comment) {
+                                $('#commentList').append('<div><strong>' + comment.username + ':</strong> ' + comment.text + '</div>');
+                            });
+                        }
+                    }
+                });
+            }
+        });
+    </script>
 </body>
 </html>
