--- a/templates/home.html
+++ b/templates/home.html
@@ -125,9 +125,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title">コメント</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
                     <form id="commentForm">
