--- a/templates/home.html
+++ b/templates/home.html
@@ -14,7 +14,7 @@
         <div class="header-content">
             <h1>StudySync</h1>
             <div class="header-actions">
-                <button type="button" class="post-btn" data-bs-toggle="modal" data-bs-target="#exampleModal">
+                <button type="button" class="post-btn" data-bs-toggle="modal" data-bs-target="#exampleModal" style="margin-right: 10px;">
                     投稿する
                 </button>
                 <a href="{{ url_for('logout') }}" class="logout-btn">ログアウト</a>
@@ -40,8 +40,35 @@
         {% for post in posts %}
         <div class="post card mb-3" data-category="{{ post.category.id }}">
             <div class="card-body">
-                <div class="username">
-                    <i class="fas fa-user-circle me-2"></i>{{ post.user.username }}
+                <div class="post-header d-flex justify-content-between align-items-center">
+                    <div class="username">
+                        <i class="fas fa-user-circle me-2"></i>{{ post.user.username }}
+                    </div>
+                    {% if current_user.id == post.user.id %}
+                    <div class="delete-btn">
+                        <button type="button" class="btn btn-danger btn-sm" data-bs-toggle="modal" data-bs-target="#deleteConfirmModal{{ post.id }}">削除</button>
+                    </div>
+                    {% endif %}
+                </div>
+                <!-- 削除確認モーダル -->
+                <div class="modal fade" id="deleteConfirmModal{{ post.id }}" tabindex="-1" aria-labelledby="deleteConfirmModalLabel{{ post.id }}" aria-hidden="true">
+                    <div class="modal-dialog">
+                        <div class="modal-content">
+                            <div class="modal-header">
+                                <h5 class="modal-title" id="deleteConfirmModalLabel{{ post.id }}">投稿削除の確認</h5>
+                                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                            </div>
+                            <div class="modal-body">
+                                この投稿を削除してもよろしいですか？
+                            </div>
+                            <div class="modal-footer">
+                                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">キャンセル</button>
+                                <form action="{{ url_for('delete_post', post_id=post.id) }}" method="POST" style="display: inline;padding: 0px;">
+                                    <button type="submit" class="btn btn-danger">削除</button>
+                                </form>
+                            </div>
+                        </div>
+                    </div>
                 </div>
                 <hr/>
                 <div class="message">{{ post.message }}</div>
