--- a/templates/login.html
+++ b/templates/login.html
@@ -1,7 +1,97 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">    
         <title>login</title>
+        <style>
+            body {
+                font-family: Arial, sans-serif;
+                background-color: #f0f0f0;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                height: 100vh;
+                margin: 0;
+            }
+            .login-container {
+                background-color: #dcdada;
+                padding: 20px;
+                border-radius: 8px;
+                box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+                width: 300px;
+            }
+            h1 {
+                text-align: center;
+                margin-bottom: 20px;
+            }
+            .form-group {
+                margin-bottom: 15px;
+            }
+            .form-row {
+                display: flex;
+                justify-content: space-between;
+                margin-bottom: 20px;
+            }
+            .form-col {
+                width: 48%;
+            }
+            label {
+                display: block;
+                margin-bottom: 5px;
+                font-weight: bold;
+            }
+            input, select {
+                width: 100%;
+                padding: 8px;
+                border: 1px solid #ccc;
+                border-radius: 4px;
+                box-sizing: border-box;
+            }
+            .required::after, .optional::after {
+                content: " 必須";
+                color: white;
+                background-color: #ff4d4d;
+                font-size: 0.7em;
+                padding: 2px 4px;
+                border-radius: 2px;
+                margin-left: 5px;
+                display: inline-block;
+                width: 28px;
+                text-align: center;
+            }
+            .optional::after {
+                content: " 任意";
+                background-color: #999;
+            }
+            .btn-primary {
+                width: 100px;
+                padding: 10px;
+                background-color: #007bff;
+                color: white;
+                border: none;
+                border-radius: 25px;
+                cursor: pointer;
+                display: block;
+                margin: auto;
+            }
+            .btn-primary:hover {
+                background-color: #0056b3;
+            }
+            .placeholder {
+                color: #999;
+            }
+            .center-link{
+                text-align: center;
+            }
+            .center-link a{
+                color: #007bff;
+            }
+            .center-link a:hover {
+                text-decoration: underline;
+                color: #0056b3;
+            }
+        </style>
     </head>
     <body>
         <div class="login-container">
@@ -9,17 +99,21 @@
             <form method="POST" action="{{ url_for('login') }}">
                 {{ form.hidden_tag() }}
                 <div class="form-group">
-                    {{ form.email.label }}<br>
-                    {{form.email(placeholder="例）example@mail.com")}}
+                    {{ form.email.label(class="required") }}
+                    {{form.email(class="form-control", placeholder="例）example@mail.com")}}
                 </div>
                 <div class="form-group">
-                    {{ form.password.label }}<br>
-                    {{form.password(placeholder="例）password")}}
+                     {{ form.password.label(class="required") }}
+                    {{form.password(class="form-control", placeholder="例）password")}}
                 </div>
-                <button type="submit">{{ form.submit.label }}</button>
+                <div class="form-group">
+                    {{ form.submit(class="btn btn-primary") }}
+                </div>
             </form>
-            <a href="{{ url_for('register') }}">アカウントの作成はこちら</a>
-    
+            <div class="center-link">
+                <a href="{{ url_for('register') }}">アカウントの作成はこちら</a>
+            </div>
         </div>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
     </body>
 </html>
